--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -7,30 +7,24 @@
     tools:context=".InputActivity">
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button"
         android:layout_width="229dp"
         android:layout_height="51dp"
-        android:layout_marginTop="664dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="568dp"
         android:layout_marginEnd="100dp"
-        android:text="Submit entry!"
+        android:layout_marginBottom="8dp"
+        android:onClick="Submit"
+        android:text="@string/submit_entry"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="283dp"
-        android:layout_height="124dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="104dp"
-        android:ems="10"
-        android:hint="Content"
-        android:inputType="textPersonName"
-        android:text=" "
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -40,5 +34,20 @@
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="283dp"
+        android:layout_height="124dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="104dp"
+        android:ems="10"
+        android:hint="Put content"
+        android:inputType="textPersonName"
+        android:text=" "
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </android.support.constraint.ConstraintLayout>
