--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,7 +7,7 @@
     tools:context=".DetailActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/id_content"
         android:layout_width="313dp"
         android:layout_height="192dp"
         android:layout_marginStart="32dp"
@@ -17,27 +17,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/id_date"
         android:layout_width="137dp"
         android:layout_height="39dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="192dp"
         android:text="Datum en tijd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/id_mood"
         android:layout_width="78dp"
         android:layout_height="38dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="132dp"
         android:text="Mood"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/id_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title journal"
