--- a/app/src/main/res/layout/entry_row.xml
+++ b/app/src/main/res/layout/entry_row.xml
@@ -5,20 +5,20 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/entrydate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/entrytitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/entrymood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
