Bezig met detail actrivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,18 @@
     tools:context=".MainActivity">
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/floatingActionButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="Createjournal"
         android:layout_gravity="bottom|end"
-        android:clickable="true" />
+        android:clickable="true"
+        android:onClick="Createjournal"
+        app:backgroundTint="@color/design_default_color_primary_dark"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <ListView
         android:id="@+id/listview_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="390dp"
+        android:layout_height="642dp" />
 
 </android.support.design.widget.CoordinatorLayout>
