--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -30,6 +30,8 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="44dp"
         android:ems="10"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         android:hint="Title Journal"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +44,8 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="104dp"
         android:ems="10"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         android:hint="Put content"
         android:inputType="textPersonName"
         android:text=" "
