--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,11 +8,15 @@
 
     <TextView
         android:id="@+id/id_content"
-        android:layout_width="313dp"
-        android:layout_height="192dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="268dp"
+        android:layout_width="352dp"
+        android:layout_height="234dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="192dp"
+        android:background="@drawable/textview_border"
+        android:fontFamily="cursive"
+        android:padding="10dp"
         android:text="Journal"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,8 +24,10 @@
         android:id="@+id/id_date"
         android:layout_width="137dp"
         android:layout_height="39dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         android:text="Datum en tijd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,19 +36,25 @@
         android:id="@+id/id_mood"
         android:layout_width="78dp"
         android:layout_height="38dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="192dp"
-        android:layout_marginEnd="132dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="136dp"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         android:text="Mood"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/id_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/textview_border"
+        android:fontFamily="sans-serif-condensed"
+        android:padding="10dp"
         android:text="Title journal"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="134dp" />
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
