--- a/app/src/main/res/layout/entry_row.xml
+++ b/app/src/main/res/layout/entry_row.xml
@@ -6,21 +6,23 @@
 
     <TextView
         android:id="@+id/entrydate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_width="110dp"
+        android:layout_height="59dp"
+        android:text="TextView"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/entrytitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/entrymood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textStyle="italic" />
 </LinearLayout>
